testData/org/elixir_lang/inspection/unresolvable_module_qualifier/nested_unresolved_qualifier.ex
defmodule NestedUnresolvedTest do
  <error descr="Module 'MyApp.Missing' is not defined or aliased in this scope">MyApp.Missing</error>.changeset(%{})
end
